--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
@@ -6,10 +6,11 @@
     ViewData["Title"] = "Sửa phiếu mượn";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@await Html.PartialAsync("_Alerts")
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Sửa phiếu mượn</h2>
-    <a asp-action="Index" class="btn btn-outline-secondary">← Quay lại</a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Quay lại</a>
 </div>
 
 <!-- Thông báo -->
@@ -176,7 +177,6 @@
         const traSachModal = document.getElementById('traSachModal');
         traSachModal?.addEventListener('show.bs.modal', function (event) {
             const button = event.relatedTarget;
-            const MaCuon = button.getAttribute('data-MaCuon');
             const MaCuon = button.getAttribute('data-MaCuon');
             const tenSach = button.getAttribute('data-tensach');
 
