update: use usp_ReturnBooks procedure

--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Details.cshtml
@@ -284,7 +284,7 @@
                 </h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
-            <form asp-action="TraSach" method="post">
+            <form asp-action="ReturnBook" method="post">
                 <input type="hidden" name="MaPhieuMuon" value="@Model.MaPhieuMuon" />
                 <input type="hidden" name="MaCuon" value="" id="MaCuonInput" />
                 <div class="modal-body">
