update: use usp_GenerateReport procedure

--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary">
+﻿<div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary mb-5">
     <div class="offcanvas-md offcanvas-end bg-body-tertiary"
          tabindex="-1"
          id="sidebarMenu"
@@ -108,32 +108,32 @@
                 <span>Báo cáo</span>
             </h6>
             <ul class="nav flex-column">
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link d-flex align-items-center gap-2" asp-controller="SachQuaHans" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
                         Sách quá hạn
                     </a>
-                </li>
+                </li> !-->
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeMuons" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
-                        Thống kê mượn theo tháng
+                        Thống kê mượn
                     </a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeTienPhats" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
                         Thống kê tiền phạt
                     </a>
-                </li>
+                </li>!-->
             </ul>
-            <hr class="my-2" />
+            <!-- <hr class="my-2" />
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Store Proceduce</span>
             </h6>
@@ -165,7 +165,7 @@
                         Đăng xuất
                     </a>
                 </li>
-            </ul>
+            </ul>!-->
         </div>
     </div>
 </div>
