--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Details.cshtml
@@ -41,7 +41,7 @@
             <dd class="col-sm-9">@Model?.TacGia?.TenTacGia</dd>
 
             <dt class="col-sm-3">Số lượng</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(m => m.SoLuong)</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.SoLuong) (Có sẵn @ViewBag.SoLuongSachCoSan cuốn)</dd>
             
             <dt class="col-sm-3">Danh mục</dt>
             <dd class="col-sm-9">
