--- a/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuons/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuons/Index.cshtml
@@ -60,7 +60,7 @@ else
             {
                 <tr>
                     <td>@r.MaPhieuMuon</td>
-                    <td>@r.HoTen (@r.MaNguoiMuon)</td>
+                    <td>@r.HoTen</td>
                     <td>@r.NgayMuon.ToString("dd/MM/yyyy")</td>
                     <td>@r.HanTra.ToString("dd/MM/yyyy")</td>
                     <td>@r.SoNgayTre</td>
