--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Index.cshtml
@@ -9,7 +9,13 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Danh sách phiếu mượn</h2>
-    <a asp-action="Create" class="btn btn-success">+ Tạo phiếu mượn</a>
+    <div>
+        <form asp-action="ProcessOverdueLoans" method="post" class="d-inline">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-primary">Xử lý quá hạn</button>
+        </form>
+        <a asp-action="Create" class="btn btn-success">+ Tạo phiếu mượn</a>
+    </div>
 </div>
 
 <div class="table-responsive">
