--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
     @await Html.PartialAsync("_ColorSection")
     @await Html.PartialAsync("_Header")
 
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid min-vh-100 pb-5">
+        <div class="row min-vh-100">
             @await Html.PartialAsync("_Sidebar")
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pt-5">
                 @RenderBody()
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <footer class="border-top footer text-muted px-5">
+    <footer class="fixed-bottom border-top footer text-muted px-5 mt-auto py-3">
         © @DateTime.Now.Year - Nhóm 3
     </footer>
 
