--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
@@ -8,7 +8,13 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Danh sách sách</h2>
-    <a asp-action="Create" class="btn btn-success">+ Thêm sách</a>
+    <div>
+        <form asp-action="RecalculateBookQuantities" method="post" class="d-inline">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-primary">Cập nhật số lượng</button>
+        </form>
+        <a asp-action="Create" class="btn btn-success">+ Thêm sách</a>
+    </div>
 </div>
 
 <div class="table-responsive">
